{
    "name": "CustomInput",
    "maps": [
        {
            "name": "MapControl",
            "id": "9e9bc403-fc3a-4ffa-ae2b-35e838ad52ce",
            "actions": [
                {
                    "name": "CameraCloseIn",
                    "type": "Value",
                    "id": "12aa6433-fb9f-4424-9feb-e3c6d3208725",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5bedd331-4c2d-4bef-9289-0c9d8a5621a5",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraCloseIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}